--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -801,7 +801,7 @@
             background-color: #3b3b3b;
             border: clamp(2px, 0.5vw, 3px) double #555;
             border-radius: clamp(8px, 2vw, 12px);
-            padding: clamp(0.3rem, 2vw, 0.6rem) clamp(0.4rem, 2.5vw, 0.8rem);
+            padding: clamp(0.3rem, 1.2vw, 0.6rem) clamp(0.4rem, 2.5vw, 0.8rem);
             box-shadow: inset 0 1px 3px rgba(255, 255, 255, 0.08);
             margin: 0;
             max-width: 100%;
@@ -822,7 +822,6 @@
             flex-direction: row;
             align-items: center;
             justify-content: space-around;
-            gap: 1rem;
         }
 
         .turn-dice-section {
