--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -262,15 +262,15 @@
         }
 
         #game-type-button {
+            margin-top: 0.5rem;
             font-family: Arial, sans-serif;
             font-size: clamp(1rem, 2vw, 1.4rem);
             color: white;
-            width: clamp(3.3rem, 6vw, 4rem);
-            height: clamp(3.3rem, 6vw, 4rem);
+            width: clamp(3rem, 6vw, 4rem);
+            height: clamp(3rem, 6vw, 4rem);
             background-color: #818181;
             border: 0.15rem double #4d4d4d;
             border-radius: 8px;
-            padding: 0.125rem;
             cursor: pointer;
             text-align: center;
             transition: background-color 0.3s;
