--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1037,40 +1037,45 @@
 
         .action-buttons {
             display: flex;
+            flex-direction: row;
+            gap: clamp(0.3rem, 2vw, 0.6rem);
+            justify-content: center;
+            align-items: center;
+        }
+
+        .action-buttons-col {
+            display: flex;
             flex-direction: column;
             gap: clamp(0.3rem, 2vw, 0.6rem);
             justify-content: center;
             align-items: center;
         }
 
-        .action-buttons-row {
-            display: flex;
-            flex-direction: row;
-            gap: clamp(0.3rem, 2vw, 0.6rem);
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-        }
-
-        .action-buttons-row.bottom {
+        .action-buttons-col.left {
             justify-content: space-around;
         }
 
         .action-buttons button {
-            padding: clamp(0.33rem, 2.2vw, 0.55rem) clamp(0.55rem, 2.75vw, 0.88rem);
-            font-size: clamp(0.77rem, 2.2vw, 1.1rem);
-            border-radius: clamp(0.22rem, 1.1vw, 0.44rem);
+            padding: clamp(0.3rem, 2vw, 0.5rem) clamp(0.5rem, 2.5vw, 0.8rem);
+            font-size: clamp(0.7rem, 2vw, 1rem);
+            border-radius: clamp(0.2rem, 1vw, 0.4rem);
             margin: 0;
             flex-shrink: 0;
-            min-width: clamp(2.2rem, 8.8vw, 3.3rem);
-            min-height: clamp(2.2rem, 8.8vw, 3.3rem);
+            min-width: clamp(2rem, 8vw, 3rem);
+            min-height: clamp(2rem, 8vw, 3rem);
             display: flex;
             align-items: center;
             justify-content: center;
         }
 
-        .action-buttons button i {
+        .action-buttons-col.right button {
+            min-width: clamp(2.2rem, 8.8vw, 3.3rem);
+            min-height: clamp(2.2rem, 8.8vw, 3.3rem);
+        }
+
+        .action-buttons-col.right button i {
             font-size: clamp(1.54rem, 4.4vw, 2.2rem);
+            color: #000;
         }
 
         .hints-table {
@@ -1377,12 +1382,12 @@
         </div>
         
         <div class="action-buttons">
-            <div class="action-buttons-row top">
-                <button id="show-button"><i class="fa fa-eye"></i></button>
-            </div>
-            <div class="action-buttons-row bottom">
+            <div class="action-buttons-col left">
                 <button id="clear-button"><i class="fa fa-trash"></i></button>
                 <button id="init-button"><i class="fa fa-home"></i></button>
+            </div>
+            <div class="action-buttons-col right">
+                <button id="show-button"><i class="fa fa-eye"></i></button>
             </div>
         </div>
         </div>
