--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1073,6 +1073,10 @@
             min-height: clamp(2.2rem, 8.8vw, 3.3rem);
         }
 
+        .action-buttons-col.left button i {
+            font-size: clamp(1.05rem, 3vw, 1.5rem);
+        }
+
         .action-buttons-col.right button i {
             font-size: clamp(1.54rem, 4.4vw, 2.2rem);
             color: #000;
