--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -1079,7 +1079,6 @@
 
         .action-buttons-col.right button i {
             font-size: clamp(1.54rem, 4.4vw, 2.2rem);
-            color: #000;
         }
 
         .hints-table {
