--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1079,6 +1079,7 @@
 
         .action-buttons-col.right button i {
             font-size: clamp(1.54rem, 4.4vw, 2.2rem);
+            background-color: green;
         }
 
         .hints-table {
