--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1071,6 +1071,7 @@
         .action-buttons-col.right button {
             min-width: clamp(2.2rem, 8.8vw, 3.3rem);
             min-height: clamp(2.2rem, 8.8vw, 3.3rem);
+            background-color: rgb(34, 177, 34);
         }
 
         .action-buttons-col.left button i {
@@ -1079,7 +1080,6 @@
 
         .action-buttons-col.right button i {
             font-size: clamp(1.54rem, 4.4vw, 2.2rem);
-            background-color: green;
         }
 
         .hints-table {
