--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -1439,7 +1439,6 @@
         <div class="match-panel">
             <div class="score-inputs">
                 <div>
-                    <label for="lower-score">Очки нижнего игрока:</label>
                     <select id="lower-score" class="selector-size">
                         <option value="0">0</option>
                         <option value="1">1</option>
@@ -1465,7 +1464,6 @@
                     </select>
                 </div>
                 <div>
-                    <label for="upper-score">Очки верхнего игрока:</label>
                     <select id="upper-score" class="selector-size">
                         <option value="0">0</option>
                         <option value="1">1</option>
@@ -1491,7 +1489,6 @@
                     </select>
                 </div>
                 <div class="match-length-selector">
-                    <label for="match_lenght">Матч до</label>
                     <select id="match_lenght" class="selector-size">
                         <option value="3">3</option>
                         <option value="4">4</option>
@@ -1515,7 +1512,6 @@
                     </select>
                 </div>
                 <div class="match-length-selector">
-                    <label for="max-cube-select">Макс куб</label>
                     <select id="max-cube-select" class="selector-size">
                         <option value="1">2</option>
                         <option value="2">4</option>
