--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1297,6 +1297,7 @@
                     </div>
                 </div>
                 <div class="match-panel">
+                    <div class="jb-title">Очки Н. Очки В. Длина матча Макс Куб</div>
                     <div class="score-inputs">
                         <div>
                             <select id="lower-score" class="selector-size">
