--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -444,8 +444,9 @@
 
         .match-panel-headers {
             display: flex;
+            padding-left: 0.5rem;
             flex-direction: row;
-            gap: clamp(0.5rem, 1.5vw, 0.8rem);
+            /* gap: clamp(0.5rem, 1.5vw, 0.8rem); */
             justify-content: center;
             align-items: center;
             width: 100%;
@@ -481,7 +482,6 @@
             flex-direction: column;
             align-items: center;
             gap: 0.3rem;
-            min-width: clamp(60px, 12vw, 90px);
         }
 
         .score-inputs label {
