--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -469,14 +469,13 @@
             flex-direction: row;
             align-items: center;
             justify-content: center;
-            flex-wrap: wrap;
-            width: 100%;
+            /* flex-wrap: wrap; */
+            /* width: 100%; */
             background-color: #3b3b3b;
             border: clamp(2px, 0.5vw, 3px) double #555;
             border-radius: clamp(8px, 2vw, 12px);
             box-shadow: inset 0 1px 3px rgba(255, 255, 255, 0.08);
         }
-
         .score-inputs > div {
             display: flex;
             flex-direction: column;
