--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -446,6 +446,7 @@
             display: flex;
             padding-left: 0.5rem;
             flex-direction: row;
+            text-align: center;
             /* gap: clamp(0.5rem, 1.5vw, 0.8rem); */
             justify-content: center;
             align-items: center;
