--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1116,7 +1116,9 @@
             align-items: center;
             justify-content: center;
         }
-
+        .cube-owner-select-btn label{
+            padding-left: 0.5rem;
+        }
         .action-buttons-col.right button {
             min-width: clamp(2.2rem, 8.8vw, 3.3rem);
             min-height: clamp(2.2rem, 8.8vw, 3.3rem);
@@ -1216,7 +1218,7 @@
         }
         .cube-controls-labels label {
             color: white;
-            font-size: clamp(0.5rem, 1.2vw, 0.7rem);  
+            font-size: clamp(0.6rem, 1.2vw, 0.7rem);  
             text-align: left;
             flex-shrink: 0;
         }
